# OT_projet

./: .gitignore  README.md  pyproject.toml  wasser_estimation.ipynb  wasser_estimation_Vlad.ipynb  wasser_estimation_torch.ipynb  wasser_estimation_torch_experiments.ipynb
notebooks/: wasser.ipynb  wasser_estimation.ipynb  wasser_estimation_torch.ipynb  wasser_estimation_torch_experiments.ipynb  wasser_exp.ipynb
src/: torch.py  utils.py
