[tool.poetry]
name = "OT_projet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.3"
jax = "^0.3.7"
jaxlib = "^0.3.7"
matplotlib = "^3.5.1"
ipykernel = "^6.13.0"
ott = "^0.1.15"
POT = "^0.8.2"
dm-haiku = "^0.0.6"
optax = "^0.1.2"
tqdm = "^4.64.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
